src/neuroglancer/widget/segment_set_widget.css
/**
 * @license
 * Copyright 2016 Google Inc.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@keyframes pulse {
  from { background-color: var(--defBtnColor); -webkit-box-shadow: 0 0 9px black; }
  50% { background-color: var(--actBtnColor); -webkit-box-shadow: 0 0 18px var(--actBtnColor); }
  to { background-color: var(--defBtnColor); -webkit-box-shadow: 0 0 9px black; }
}

.segment-set-widget button {
  margin: 3px;
  margin-right: 4px;
}

.segment-set-widget {
  overflow-y: auto;
}

.segment-set-widget .item-container {
  display: flex;
  flex-wrap: wrap;
}

.copy-all-segment-IDs-button {
  height: 21px;
  vertical-align: bottom;
}

.segment-copy-button {
  height: 21px;
  vertical-align: bottom;
}

.eyes-symbol-for-button {
  font-size: 1.1em;
  position: relative;
  bottom: 2px;
}

.copy-visible-segment-IDs-button {
  padding-left: 4px;
  padding-right: 4px;
}

.segment-checkbox {
  width: 1.2em;
  height: 1.2em;
  vertical-align: bottom;
}

.segment-set-widget button.segment-button.selectedSeg {
  animation-name: pulse;
  animation-duration: var(--pulseSpeed);
  animation-iteration-count: infinite;
}

.segment-color-selector {
  height: 17px;
  width: 1.6em;
  margin: 3px;
  vertical-align: bottom;
}

